src/objects/Eboard_Resigned_Removed__c.object
<CustomObject>
    <description>Contains resigned/removed E Board.</description>
    <fields>
        <fullName>Ballot_Name__c</fullName>
        <label>Ballot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Code__c</fullName>
        <label>Constituency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <label>Constituency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Board_Year__c</fullName>
        <label>E Board Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eboard Candidate</label>
        <referenceTo>Eboard_Candidate__c</referenceTo>
        <relationshipLabel>Eboard Resigned/Removed</relationshipLabel>
        <relationshipName>Eboard_Resigned_Removed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eboard_Ecomm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eboard/Ecomm</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Eboard Resigned/Removed</relationshipLabel>
        <relationshipName>Eboard_Resigned_Removed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Title__c</fullName>
        <label>Executive Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <label>FID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_EB_Seat__c</fullName>
        <label>Former EB Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Eboard_Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Former Eboard Seat</label>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>Eboard Resigned/Removed</relationshipLabel>
        <relationshipName>Eboard_Resigned_Removed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Former_Subseat_Id__c</fullName>
        <label>Former Subseat Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instated_To_Office__c</fullName>
        <label>Instated To Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberId__c</fullName>
        <label>MemberId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_From_Office__c</fullName>
        <label>Removed From Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resigned_From_Office__c</fullName>
        <label>Resigned From Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resigned_Removed_Reason__c</fullName>
        <formula>Eboard_Candidate__r.Resigned_Removed_Reason__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resigned/Removed Reason</label>
        <type>Text</type>
    </fields>
    <label>Eboard Resigned/Removed</label>
    <nameField>
        <displayFormat>EBR-{0000}</displayFormat>
        <label>EboardResignedNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eboard Resigned/Removed</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>